--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
   "license": "MIT",
   "dependencies": {
     "typescript": "^4.2.3"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.37"
   }
 }
